# Solazzo

./: .gitignore  Solana Assholes.pages  Solana Conviction Protocol Whitepaper V1.rtf  conviction_protocol_implementation_plan.docx
files/: solazzo_implementation_plan.docx  solazzo_points_spec.md  solazzo_protocol_v1_spec.md  solazzo_trait_system_spec.md  solazzo_verification_evidence_log.md  solazzo_verification_runbook.md  solazzo_whitepaper_v1.docx
landing/: package-lock.json
landing/src/app/: globals.css  layout.tsx  page.tsx
make/: .gitignore  README.md  package-lock.json  package.json
make/scripts/: seed-conviction.ts  test-generate.ts
make/src/app/: globals.css  layout.tsx  page.tsx
make/src/app/gallery/: page.tsx
make/src/app/leaderboard/: page.tsx
make/src/app/traits/: page.tsx
make/src/components/: coming-soon-toast.tsx  navbar.tsx  solana-provider.tsx
make/src/lib/: gallery-store.ts  gemini.ts  prompt.ts  publish-auth.ts  rate-limit.ts  reference-images.ts  report.ts  rpc-retry.ts  storage.ts  test-gate.ts
make/src/lib/onchain/: pda.ts  (+2 more)
onchain/: Anchor.toml  README.md  package.json
onchain/indexer/: README.md  package-lock.json  package.json  tsconfig.json
onchain/indexer/migrations/: 001_init.sql
onchain/indexer/src/: cli.ts  db.ts  decoder.ts  ingest.ts
onchain/indexer/test/: indexer.test.ts
onchain/programs/solazzo-core/: Cargo.toml
onchain/programs/solazzo-core/src/: constants.rs  error.rs  lib.rs  state.rs
onchain/tests/: events.ts  solazzo-core.ts  zz-settlement.ts
solazzo/: package.json
solazzo/src/app/: page.tsx
(+13 files in other folders)
