[package]
name = "solazzo-core"
version = "0.1.0"
description = "Solazzo on-chain program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solazzo_core"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"
pyth-solana-receiver-sdk = "1.1.0"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
